--- a/.github/workflows/maven-deploy.yml
+++ b/.github/workflows/maven-deploy.yml
@@ -39,11 +39,18 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=sun-java-project -Dsonar.projectName='sun-java-project'
 
+    - name: Create Artifact
+      run: |
+          mkdir -p artifact  # Create the artifact directory
+          echo "This is a sample artifact file" > artifact/sample.txt  # Example content to include in the artifact
+          ls -al artifact  # List the contents of the artifact directory to verify
+
+      # Step to upload the artifact
     - name: Publish Artifacts    
       uses: actions/upload-artifact@v4
       with:
-        name: Package
-        path: staging
+          name: Package  # The name of the artifact you want to upload
+          path: artifact  # The directory that contains the files you want to upload
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     
