--- a/.github/workflows/maven-deploy.yml
+++ b/.github/workflows/maven-deploy.yml
@@ -68,7 +68,39 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Set up SSH key
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Add your private key in GitHub secrets
+    
+
+    - name: Set up SSH private key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/my-key.pem
+        chmod 600 ~/.ssh/my-key.pem  # Set appropriate permissions for the private key
+    - name: Ensure target directory exists on EC2
+      run: |
+        ssh -i ~/.ssh/my-key.pem ubuntu@13.233.97.90 << 'EOF'
+          # Ensure /home/ubuntu/app directory exists
+          sudo mkdir -p /home/ubuntu/app
+          sudo chown ubuntu:ubuntu /home/ubuntu/app  # Give ownership to the ubuntu user
+          # Ensure it has the correct permissions
+          sudo chmod 755 /home/ubuntu/app
+        EOF
+
+    - name: Deploy code to EC2
+      run: |
+        # Verify that the artifact directory exists and list its contents
+        #echo "Checking if the artifact directory exists:"
+        #ls -al artifact/
+        # Copy the artifact to EC2 instance using scp with the private key
+        #scp -i ~/.ssh/my-key.pem -r artifact/* ubuntu@10.0.1.207:/home/ubuntu/app
+        #scp -i ~/.ssh/my-key.pem -r artifact/* ubuntu@10.0.1.207:/home/ubuntu/app
+        scp -i ~/.ssh/my-key.pem -r * ubuntu@172.31.47.126:/home/ubuntu/app
+        # SSH into the EC2 instance to install dependencies and start the app
+        ssh -i ~/.ssh/my-key.pem ubuntu@172.31.47.126 << 'EOF'
+          cd /home/ubuntu/app
+          # Install dependencies if not already installed
+          python -m pip install --upgrade pip
+          pip install pytest
+          # Start the Python app (adjust the command as needed)
+          nohup python code/addition.py &
+          echo "Application started."
+        EOF
