--- a/.github/workflows/maven-deploy.yml
+++ b/.github/workflows/maven-deploy.yml
@@ -45,62 +45,62 @@ jobs:
           echo "This is a sample artifact file" > artifact/sample.txt  # Example content to include in the artifact
           ls -al artifact  # List the contents of the artifact directory to verify
 
-      # Step to upload the artifact
-    - name: Publish Artifacts    
+  
+    - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
-          name: Package  # The name of the artifact you want to upload
-          path: artifact  # The directory that contains the files you want to upload
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    
-      
-    - name: Download Artifacts
-      uses: actions/download-artifact@v3
-      with:
         name: Package
-        path: ./downloaded-artifacts
+        path: artifact/*  # The directory containing files to upload
+        
 
-    - name: Set up AWS CLI
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+  deploy:
+    runs-on: self-hosted  # Run on your self-hosted runner
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: Package
+          path: ./downloaded-artifacts
 
-    - name: Set up SSH private key
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/my-key.pem
-        chmod 600 ~/.ssh/my-key.pem  # Set appropriate permissions for the private key
-    - name: Ensure target directory exists on EC2
-      run: |
-        ssh -i ~/.ssh/my-key.pem ubuntu@13.233.97.90 << 'EOF'
-          # Ensure /home/ubuntu/app directory exists
-          sudo mkdir -p /home/ubuntu/app
-          sudo chown ubuntu:ubuntu /home/ubuntu/app  # Give ownership to the ubuntu user
-          # Ensure it has the correct permissions
-          sudo chmod 755 /home/ubuntu/app
-        EOF
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Deploy code to EC2
-      run: |
-        # Verify that the artifact directory exists and list its contents
-        #echo "Checking if the artifact directory exists:"
-        #ls -al artifact/
-        # Copy the artifact to EC2 instance using scp with the private key
-        #scp -i ~/.ssh/my-key.pem -r artifact/* ubuntu@10.0.1.207:/home/ubuntu/app
-        #scp -i ~/.ssh/my-key.pem -r artifact/* ubuntu@10.0.1.207:/home/ubuntu/app
-        scp -i ~/.ssh/my-key.pem -r * ubuntu@172.31.47.126:/home/ubuntu/app
-        # SSH into the EC2 instance to install dependencies and start the app
-        ssh -i ~/.ssh/my-key.pem ubuntu@172.31.47.126 << 'EOF'
-          cd /home/ubuntu/app
-          # Install dependencies if not already installed
-          python -m pip install --upgrade pip
-          pip install pytest
-          # Start the Python app (adjust the command as needed)
-          nohup python code/addition.py &
-          echo "Application started."
-        EOF
+      - name: Set up SSH private key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/my-key.pem
+          chmod 600 ~/.ssh/my-key.pem  # Set appropriate permissions for the private key
+
+      - name: Ensure target directory exists on EC2
+        run: |
+          ssh -i ~/.ssh/my-key.pem ubuntu@13.233.97.90 << 'EOF'
+            # Ensure /home/ubuntu/app directory exists
+            sudo mkdir -p /home/ubuntu/app
+            sudo chown ubuntu:ubuntu /home/ubuntu/app  # Give ownership to the ubuntu user
+            # Ensure it has the correct permissions
+            sudo chmod 755 /home/ubuntu/app
+          EOF
+
+      - name: Deploy code to EC2
+        run: |
+          # Copy the artifact to EC2 instance using scp with the private key
+          scp -i ~/.ssh/my-key.pem -r * ubuntu@52.66.196.5:/home/ubuntu/app
+
+          # SSH into the EC2 instance to install dependencies and start the app
+          ssh -i ~/.ssh/my-key.pem ubuntu@52.66.196.5 << 'EOF'
+            cd /home/ubuntu/app
+            # Install dependencies if not already installed
+            python -m pip install --upgrade pip
+            pip install pytest
+            # Start the Python app (adjust the command as needed)
+            nohup python code/addition.py &
+            echo "Application started."
+          EOF
